# Django-ListadeReceita

./: README.md  manage.py  pyproject.toml
recipes/: models.py  urls.py  views.py
recipes/templates/: home.html
recipes/templates/recipes/pages/: home.html
recipes/templates/recipes/partials/: head.html  header.html  recipe.html  search.html
teste_filtro/: asgi.py  settings.py  urls.py  wsgi.py
